snowball challenge/css/style.css
* {
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

.header {
  height: 50px;
  background: #00b8fc;
  padding: 30px 30px 30px;
  font-family: "Montserrat", sans-serif;
  color: white;
  line-height: 44px;
  left: 50%;
  right: 50%;
}

.header h1 {
  text-align: center;
  text-transform: uppercase;
}

.wrapper {
  width: 100%;
}

.menu {
  padding: 30px 30px 20px;
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  line-height: 24px;
}

.menu ul {
  list-style: none;
}

.menu ul a {
  text-decoration: none;
  color: #111;
}

.menu ul a:hover {
  color: #00b8fc;
}

.img-info {
  width: 100%;
}

.img-info h2 {
  padding: 30px 30px 20px;
  font-family: "Montserrat", sans-serif;
  font-size: 40px;
  color: #00b8fc;
  line-height: 44px;
  text-transform: uppercase;
}

.img-info p {
  padding: 0px 30px 20px;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  color: #111;
  line-height: 24px;
}

.footer-bottom {
  background: #00b8fc;
  color: #fff;
  height: 30px;
  width: 100%;
  text-align: center;
  position: absolute;
  bottom: 0px;
  left: 0px;
  padding-top: 10px;
  display: none;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
}

@media only screen and (min-width: 768px) {
  .wrapper {
    width: 600px;
    margin: 0 auto;
  }

  .img-info h2 {
    padding: 20px 0px 0px;
  }

  .img-info p {
    padding: 20px 0px 0px;
  }

  .footer-bottom {
    display: block;
  }

  .menu {
    padding: 20px 0px 0px;
  }
}

@media only screen and (min-width: 1000px) {
  .wrapper {
    width: 1000px;
  }

  .img-info {
    width: 100%;
    float: left;
  }

  .img-info h2 {
    padding: 20px 0px 0px 30px;
  }

  .img-info p {
    padding: 20px 0px 0px 30px;
  }

  .footer-bottom {
    display: block;
  }

  .menu {
    padding: 20px 0px 0px 30px;
  }
}

